--- a/templates/_partials/footer.html.twig
+++ b/templates/_partials/footer.html.twig
@@ -1,17 +1,9 @@
-<footer class ="container-fluid bg-light">
-    <div class ="row">
-        <section class="col">
-            Colonne 1
+<div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <p class="col-md-4 mb-0 text-muted">© 2023 SyhardStore INC</p>
 
-        </section>
-        <section class="col">
-            Colonne 2
-
-        </section>
-        <section class="col">
-            Colonne 3
-
-        </section>
-
-    </div>
-</footer>
+        <a href="{{ path('app_main') }}" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+            <img src="{{ asset('assets/images/logo-syhard.png') }}" alt="logo" width="50" height="50">
+        </a>
+    </footer>
+</div>
