--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,46 +1,36 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Inscription{% endblock %}
 
 {% block body %}
-    <section class="container">
-        <div class="row">
-            <div class="col">
-                <h1>Register</h1>
-
-                {{ form_start(registrationForm) }}
-                <fieldset class = m-auto>
-                    <legend>
-                        Mon identité de Syhardeur
-                    </legend>
-                    {{ form_row(registrationForm.lastname) }}
-                    {{ form_row(registrationForm.firstname) }}
-                    {{ form_row(registrationForm.email) }}
-
-                </fieldset>
-
-                <fieldset class="m-auto">
-                    <legend>
-                            Mes coordonnés
-                    </legend>
-                    {{ form_row(registrationForm.address) }}
-                    {{ form_row(registrationForm.zipcode) }}
-                    {{ form_row(registrationForm.city) }}
-                </fieldset>
-
+<main class="container">
+    <div class="bg-light p-5 rounded">
+        <h1>Connectez vous à votre espace SyhardSTORE</h1>
+        {{ form_start(registrationForm) }}
+        <form>
+            <div class="mb-3">
+                {{ form_row(registrationForm.lastname) }}
+                {{ form_row(registrationForm.firstname) }}
+                {{ form_row(registrationForm.email) }}
+            </div>
+            <div class="mb-3">
+                {{ form_row(registrationForm.address) }}
+                {{ form_row(registrationForm.zipcode) }}
+                {{ form_row(registrationForm.city) }}
 
                 {{ form_row(registrationForm.plainPassword, {
                     label: 'Password'
                 }) }}
-                {{ form_row(registrationForm.RGPDConsent) }}
-
-                <button type="submit" class="btn btn-primary btn-lg ">S'inscrire</button>
-                <a href ="{{ path('app_login') }}"class ="btn btn-secondary">Me connecter  </a>
-                {{ form_end(registrationForm) }}
-
+                <div class="mb-3 form-check">
+                    {{ form_row(registrationForm.RGPDConsent) }}
+                </div>
             </div>
-        </div>
-    </section>
 
+            <button type="submit" class="btn btn-primary">S'inscrire</button>
+            <a href="{{ path('app_login') }}" class="btn btn-secondary">Me connecter</a>
+            {{ form_end(registrationForm) }}
+        </form>
+    </div>
+</main>
 
 {% endblock %}
