--- a/templates/products/details.html.twig
+++ b/templates/products/details.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
-{% block title %} Détails des produits {% endblock %}
+{% block title %} Détails des {{ products.name }}{% endblock %}
 
 {% block body %}
-    <h1>Détails des produits</h1>
+    <h1>Détails des {{ products.name }}</h1>
 {% endblock %}
