--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -5,34 +5,37 @@
 
 {% block body %}
 
-    <h1><p class="text-center">Nos produit phare </p></h1>
+    <h1><p class="text-center">Catégories</p></h1>
 
-    <div class="w-100 p-4" style="background-color: #eee;"></div>
+    <div class="container">
 
-    <div class="container marketing">
-
-        <!-- Three columns of text below the carousel -->
+        <!-- CATEGORIES -->
         <div class="row">
-            <div class="col-lg-4">
-                <img class="rounded-circle d-block mx-auto" src="{{ asset('assets/images/logo-syhard.png') }}"   alt="Generic placeholder image" width="140" height="140"  >
-                <h2><p class="text-center">Produit </p> </h2>
-                <p>Description</p>
-                <div class="text-center"><p><a class="btn btn-dark" href="#" role="button">Voir en détails &rarr;</a></p></div>
-            </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-                <img class="rounded-circle d-block mx-auto" src="{{ asset('assets/images/logo-syhard.png') }}" alt="Generic placeholder image" width="140" height="140">
-                <h2><p class="text-center">Produit </p> </h2>
-                <p>Description</p>
-                <div class="text-center"> <p><a class="btn btn-dark" href="#" role="button">Voir en détails &rarr;</a></p></div>
-            </div><!-- /.col-lg-4 -->
-            <div class="col-lg-4">
-                <img class="rounded-circle d-block mx-auto" src="{{ asset('assets/images/logo-syhard.png') }}" alt="Generic placeholder image" width="140" height="140">
-                <h2><p class="text-center">Produit </p> </h2>
-                <p>Description</p>
-                <div class="text-center"><p><a class="btn btn-dark" href="#" role="button">Voir en détails &rarr;</a></p></div>
-            </div><!-- /.col-lg-4 -->
-        </div><!-- /.row -->
+            {% for categorie in categories %}
+                <!-- Categorie -->
+                <div class="col-lg-12">
+                {% if categorie.parent == null %}
+                    <div class="col-lg-3">
+                        <h3>{{ categorie.name }}</h3>
+                    </div>
+                </div>
 
+                {% else %}
+                <div class="col-lg-4 mb-5">
+                    <!-- Carte boostrap avec catégorie enfant -->
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ categorie.name }}</h5>
+                            <a href="#" class="btn btn-primary">Voir les produits</a>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
 
+            {% endfor %}
+
+        </div>
+
+<div
 
 {% endblock %}
