--- a/templates/categories/list.html.twig
+++ b/templates/categories/list.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container">
         <div class="row">
-            <h1>Liste des produits de la catégories {{ category.name }}</h1>
+            <h1>Liste des produits de la catégories {{ categories.name }}</h1>
         </div>
 
 
