--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,6 +39,17 @@
     </head>
     <body>
     {% include "_partials/_nav.html.twig" %}
+    {% if app.user and app.user.isVerified == false %}
+        <div class="alert alert-warning alert-dismissible" role="alert">
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            <div class="alert-message">
+                <strong>Votre compte n'est pas encore vérifié.</strong><a href="{{ path('renvoie_verif') }}">Renvoyer le mail de vérification</a>
+            </div>
+        </div>
+    {% endif %}
+
+    {% include "_partials/_flash.html.twig" %}
+
     {% block body %}{% endblock %}
     {% include "_partials/footer.html.twig" %}
     </body>
