--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -29,6 +29,7 @@
                 >
                 <button type="submit" class="btn btn-primary">Connexion</button>
                 <a href ="{{ path('app_register') }}" class ="btn btn-secondary"> S'inscrire  </a>
+                <a href ="{{ path('forgotten_password') }}" class ="btn btn-secondary">Mot de passe oublié ?     </a>
             </form>
         </div>
     </main>
