création de la route et du slug pour voir les détail d'un produit

--- a/templates/categories/index.html.twig
+++ b/templates/categories/index.html.twig
@@ -1,6 +1,7 @@
 {% extends "base.html.twig" %}
 
-{% block title %} Categoris {% endblock %}
+{% block title %}Liste des produits de la catégories {% endblock %}
+
 
 {% block body %}
 
