--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,12 +28,15 @@
     <body>
     {% include "_partials/_nav.html.twig" %}
     {% if app.user and app.user.isVerified == false %}
-        <div class="alert alert-warning alert-dismissible" role="alert">
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            <div class="alert-message">
-                <strong>Votre compte n'est pas encore vérifié.</strong><a href="{{ path('renvoie_verif') }}">Renvoyer le mail de vérification</a>
+        <div class="container-fluid p-5">
+            <div class="alert alert-warning alert-dismissible" role="alert">
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                <div class="alert-message">
+                    <strong>Votre compte n'est pas encore vérifié. </strong><a href="{{ path('renvoie_verif') }}">Renvoyer le mail de vérification</a>
+                </div>
             </div>
         </div>
+
     {% endif %}
 
     {% include "_partials/_flash.html.twig" %}
