--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -39,146 +39,18 @@
             <nav class="row gy-4">
                 <div class="col-lg-6 col-md-12">
                     <div class="row">
-                        <div class="col-3">
-                            <a href="#" class="text-center d-flex flex-column justify-content-center">
-                                <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
-                                    <i class="fas fa-couch fa-xl fa-fw"></i>
-                                </button>
-                                <div class="text-dark">Interior items</div>
-                            </a>
-                        </div>
-                        <div class="col-3">
-                            <a href="#" class="text-center d-flex flex-column justify-content-center">
-                                <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
-                                    <i class="fas fa-basketball-ball fa-xl fa-fw"></i>
-                                </button>
-                                <div class="text-dark">Sport and travel</div>
-                            </a>
-                        </div>
-                        <div class="col-3">
-                            <a href="#" class="text-center d-flex flex-column justify-content-center">
-                                <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
-                                    <i class="fas fa-ring fa-xl fa-fw"></i>
-                                </button>
-                                <div class="text-dark">Jewellery</div>
-                            </a>
-                        </div>
-                        <div class="col-3">
-                            <a href="#" class="text-center d-flex flex-column justify-content-center">
-                                <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
-                                    <i class="fas fa-clock fa-xl fa-fw"></i>
-                                </button>
-                                <div class="text-dark">Accessories</div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-12">
-                    <div class="row">
-                        <div class="col-3">
-                            <a href="#" class="text-center d-flex flex-column justify-content-center">
-                                <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
-                                    <i class="fas fa-car-side fa-xl fa-fw"></i>
-                                </button>
-                                <div class="text-dark">Automobiles</div>
-                            </a>
-                        </div>
-                        <div class="col-3">
-                            <a href="#" class="text-center d-flex flex-column justify-content-center">
-                                <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
-                                    <i class="fas fa-home fa-xl fa-fw"></i>
-                                </button>
-                                <div class="text-dark">Home items</div>
-                            </a>
-                        </div>
-                        <div class="col-3">
-                            <a href="#" class="text-center d-flex flex-column justify-content-center">
-                                <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
-                                    <i class="fas fa-guitar fa-xl fa-fw"></i>
-                                </button>
-                                <div class="text-dark">Musical items</div>
-                            </a>
-                        </div>
-                        <div class="col-3">
-                            <a href="#" class="text-center d-flex flex-column justify-content-center">
-                                <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
-                                    <i class="fas fa-book fa-xl fa-fw"></i>
-                                </button>
-                                <div class="text-dark">Book, reading</div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-12">
-                    <div class="row">
-                        <div class="col-3">
-                            <a href="#" class="text-center d-flex flex-column justify-content-center">
-                                <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
-                                    <i class="fas fa-baby-carriage fa-xl fa-fw"></i>
-                                </button>
-                                <div class="text-dark">Kid's toys</div>
-                            </a>
-                        </div>
-                        <div class="col-3">
-                            <a href="#" class="text-center d-flex flex-column justify-content-center">
-                                <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
-                                    <i class="fas fa-paw fa-xl fa-fw"></i>
-                                </button>
-                                <div class="text-dark">Pet items</div>
-                            </a>
-                        </div>
-                        <div class="col-3">
-                            <a href="#" class="text-center d-flex flex-column justify-content-center">
-                                <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
-                                    <i class="fas fa-tshirt fa-xl fa-fw"></i>
-                                </button>
-                                <div class="text-dark">Men's clothing</div>
-                            </a>
-                        </div>
-                        <div class="col-3">
-                            <a href="#" class="text-center d-flex flex-column justify-content-center">
-                                <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
-                                    <i class="fas fa-shoe-prints fa-xl fa-fw"></i>
-                                </button>
-                                <div class="text-dark">Men's clothing</div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-12">
-                    <div class="row">
-                        <div class="col-3">
-                            <a href="#" class="text-center d-flex flex-column justify-content-center">
-                                <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
-                                    <i class="fas fa-mobile fa-xl fa-fw"></i>
-                                </button>
-                                <div class="text-dark">Smartphones</div>
-                            </a>
-                        </div>
-                        <div class="col-3">
-                            <a href="#" class="text-center d-flex flex-column justify-content-center">
-                                <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
-                                    <i class="fas fa-tools fa-xl fa-fw"></i>
-                                </button>
-                                <div class="text-dark">Tools</div>
-                            </a>
-                        </div>
-                        <div class="col-3">
-                            <a href="#" class="text-center d-flex flex-column justify-content-center">
-                                <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
-                                    <i class="fas fa-pencil-ruler fa-xl fa-fw"></i>
-                                </button>
-                                <div class="text-dark">Education</div>
-                            </a>
-                        </div>
-                        <div class="col-3">
-                            <a href="#" class="text-center d-flex flex-column justify-content-center">
-                                <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
-                                    <i class="fas fa-warehouse fa-xl fa-fw"></i>
-                                </button>
-                                <div class="text-dark">Other items</div>
-                            </a>
-                        </div>
+                        {% for categorie in categories %}
+                            {% if categorie.parent != null %}
+                                <div class="col-3">
+                                    <a href="{{ path('categories_list', {slug: categorie.slug}) }}" class="text-center d-flex flex-column justify-content-center">
+                                        <button type="button" class="btn btn-outline-secondary mx-auto p-3 mb-2" data-mdb-ripple-color="dark">
+                                            <i class="{{ categorie.icon }} fa-xl fa-fw"></i>
+                                        </button>
+                                        <div class="text-dark">{{ categorie.name }}</div>
+                                    </a>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
                     </div>
                 </div>
             </nav>
