--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -99,10 +99,10 @@
             <div class="card p-4 bg-primary">
                 <div class="row align-items-center">
                     <div class="col">
-                        <h4 class="mb-0 text-white">Best products and brands in store</h4>
-                        <p class="mb-0 text-white-50">Trendy products and text to build on the card title</p>
+                        <h4 class="mb-0 text-white">Envie de jouer à LOL ?</h4>
+                        <p class="mb-0 text-white-50">Ajouter Syhard sur League Of Legends dès maintenant !</p>
                     </div>
-                    <div class="col-auto"><a class="btn btn-white text-primary shadow-0" href="#">Discover</a></div>
+                    <div class="col-auto"><a class="btn btn-white text-primary shadow-0" href="https://blitz.gg/lol/profile/euw1/Syhard%20v2">AJOUTER SYHARD</a></div>
                 </div>
             </div>
         </div>
