--- a/templates/products/details.html.twig
+++ b/templates/products/details.html.twig
@@ -3,5 +3,51 @@
 {% block title %} Détails des {{ products.name }}{% endblock %}
 
 {% block body %}
-    <h1>Détails des {{ products.name }}</h1>
+    <div class="container">
+    <div class="row">
+        <h1>{{ products.name }}</h1>
+    </div>
+        <div class="col-6">
+        <div id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+
+                {% for iteration in 1..products.images|length %}
+                <button type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide-to="{{ iteration - 1 }}" {{ (loop.first ) ?
+                        'class="active" aria-current="true"' : '' }} aria-label="Slide {{ iteration }}"></button>
+                {% endfor %}
+
+            </div>
+            <div class="carousel-inner">
+                {% for image in products.images %}
+                    <div class="carousel-item {{ (loop.first ) ? 'active' : '' }}">
+                        <img src="{{ asset('assets/uploads/') ~ image.name }}"
+                             class="d-block w-100" alt="{{ products.name }}">
+                    </div>
+                {% endfor %}
+
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+    <div class="col-6">
+
+    </div>
+    <p>{{ products.description }}</p>
+    <p>Carégorie : {{ products.categories.name }}</p>
+    <p>Prix :{{ products.prix / 100 }} € </p>
+        {% if products.stock > 0 %}
+            <a href="#" class="btn btn-success">Ajouter au panier</a>
+        {% else %}
+            <p class="text-danger">Temporairement en rupture de stock</p>
+        {% endif %}
+    </div>
+
 {% endblock %}
