--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -16,28 +16,21 @@
             padding: 2px 6px;
         }
     </style>
-    <!--
-<div class="example-wrapper">
-    <h1>Hello ! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/SyhardStore/src/Controller/ProfileController.php'|file_link(0) }}">src/Controller/ProfileController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/SyhardStore/templates/profile/index2.html.twig'|file_link(0) }}">templates/profile/index.html.twig</a></code></li>
-    </ul>
-</div>-->
     <div class="container">
         <h1 class="text-center">{{ compte }}</h1>
 
-        <div class="card-body">
-            <p class="card-text">{{ firstname }} {{ lastname }}</p>
-            <p class="card-text">{{ email }}</p>
+        <div class="card mb-4 bg-secondary text-dark">
+            <div class="card-body">
+                <p class="card-text">{{ firstname }} {{ lastname }}</p>
+                <p class="card-text">{{ email }}</p>
 
-            <a href="{{ path('app_logout') }}" class="rounded nav-link d-flex text-decoration-underline">
-                <p class="">Déconnexion</p>
-            </a>
+                <a href="{{ path('app_logout') }}" class="rounded nav-link d-flex text-decoration-underline">
+                    <p class="">Déconnexion</p>
+                </a>
+            </div>
         </div>
-        <div class="card">
+        <div class="card mb-4 bg-secondary text-dark">
             <div class="card-title">
                 <div class="card-body">
                     <h3 class="card-title">CARNET D'ADRESSES</h3>
