--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -25,7 +25,7 @@
                                 <i class="fas fa-shopping-cart m-1 me-md-2"></i>
                                 <p class="d-none d-md-block mb-0">Panier</p>
                             </a>
-                            {% if is_granted('ROLE_PRODUCT_ADMIN') %}
+                                {% if is_granted('ROLE_PRODUCT_ADMIN') %}
                                 <a href="{{ path('admin_index') }}" class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center">
                                     <i class="fa-solid fa-gear m-1 me-md-2"></i>
                                     <p class="d-none d-md-block mb-0">Administration</p>
@@ -45,7 +45,7 @@
                 </div>
                 <!-- Center elements -->
 
-                <!-- Right elements -->
+                <!-- Right elements
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="input-group float-center">
                         <div class="form-outline">
@@ -56,7 +56,7 @@
                             <i class="fas fa-search"></i>
                         </button>
                     </div>
-                </div>
+                </div>-->
                 <!-- Right elements -->
             </div>
         </div>
@@ -86,9 +86,6 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link text-dark" aria-current="page" href="{{ path('app_main') }}">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="{{ path('categories_index') }}">Catégories</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="{{ path('produits_index') }}">Produits</a>
