--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -35,6 +35,9 @@
 
     <section>
         <div class="container pt-5">
+            <header class="mb-4">
+                <h3>Nos Catégories</h3>
+            </header>
             <nav class="row gy-4">
                 <div class="col-lg-12 col-md-12">
                     <div class="row">
