changement du main

--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -10,7 +10,7 @@
                     </a>
                 </div>
                 <!-- Center elements -->
-                <div class="order-lg-last col-lg-5 col-sm-8 col-8">
+                <div class="order-lg-last col-lg-5 col-sm-8 col-8 ms-auto">
                     <div class="d-flex float-end">
                         {% if app.user %}
                             <a href="{{ path('profil_index') }}" class="me-1 border rounded py-1 px-3 nav-link d-flex align-items-center">
@@ -81,7 +81,7 @@
             </button>
 
             <!-- Collapsible wrapper -->
-            <div class="collapse navbar-collapse" id="navbarLeftAlignExample">
+            <div class="collapse navbar-collapse " id="navbarLeftAlignExample">
                 <!-- Left links -->
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
